--- a/real-world/packages/database_service/package.json
+++ b/real-world/packages/database_service/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "graphql": "^14.0.2",
-    "graphql-tools": "^4.0.0"
+    "graphql-tools": "^4.0.0",
+    "mongoose": "^5.3.0"
   }
 }
